fixes #69 - left panel does not expand beyond screen-size, only overflows.

--- a/media/seak/css/seak.css
+++ b/media/seak/css/seak.css
@@ -306,3 +306,7 @@ tbody.pu-show {
 .old_ie_wrapper tbody { 
     height: auto; 
 }
+
+#scenario-html {
+    overflow-y: auto;
+}
